fixed spacing
fixed spacing on nav bar
fixed spacing on icons
added bootstrap

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -16,3 +16,11 @@
   #images {
       float:center;
   }
+
+  mat-grid-tile {
+    background: lightblue;
+  }
+
+  #imageGrid {
+    float:right;
+  }
